RESOLVED FIXED247461
CVE-2022-32919 Punycode Arabic diacritics when not preceded by an Arabic code point in a URL host
https://bugs.webkit.org/show_bug.cgi?id=247461
Summary Punycode Arabic diacritics when not preceded by an Arabic code point in a URL...
Alex Christensen
Reported 2022-11-03 15:58:34 PDT
Attachments
Alex Christensen
Comment 1 2022-11-03 15:59:03 PDT
EWS
Comment 2 2022-11-04 12:23:28 PDT
Committed 256332@main (85e478aae63c): <https://commits.webkit.org/256332@main> Reviewed commits have been landed. Closing PR #6107 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.