Tools/TestWebKitAPI/Tests/WTF/cocoa/URLExtras.mm
@@ -131,6 +131,8 @@ TEST(WTF_URLExtras, URLExtras_Spoof)
         "xn--o-10e", // 'o' U+0BE6
         "xn--a-53i", // U+15AF 'a'
         "xn--a-63i", // 'a' U+15AF
+        "xn--3hb112n", // U+065B
+        "xn--a-ypc062v", // 'a' U+065B
     };
     for (const String& host : punycodedSpoofHosts) {
         auto url = makeString("http://", host, "/").utf8();
@@ -160,6 +162,9 @@ TEST(WTF_URLExtras, URLExtras_NotSpoofed)
 
     // Canadian aboriginal
     EXPECT_STREQ("https://\u15AF\u1401abc/", userVisibleString(literalURL("https://\u15AF\u1401abc/")));
+
+    // Arabic
+    EXPECT_STREQ("https://\u0620\u065Babc/", userVisibleString(literalURL("https://\u0620\u065Babc/")));
 }
 
 TEST(WTF_URLExtras, URLExtras_DivisionSign)
